...
                }
            }
        }
    }
}

internal const val CAMERA_SOURCE_TAG = "capture-source-camera"
internal const val PHOTO_SOURCE_TAG = "capture-source-photo"
internal const val PDF_SOURCE_TAG = "capture-source-pdf"

